# introduction-to-embedded-rust

./: .gitignore  Dockerfile  README.md
.devcontainer/: devcontainer.json
.scripts/: entrypoint.sh
workspace/: default.code-workspace
workspace/02-blinky/: Cargo.toml
workspace/apps/02-blinky/: Cargo.toml  firmware.uf2
workspace/apps/02-blinky/.cargo/: config.toml
workspace/apps/02-blinky/src/: main.rs
workspace/apps/blinky/: Cargo.toml  blinky.uf2  firmware.uf2
workspace/apps/blinky-rp2040/: Cargo.toml
workspace/apps/blinky-rp2040/.cargo/: config.toml
workspace/apps/blinky/.cargo/: config.toml
workspace/apps/blinky/src/: main.rs
workspace/apps/embassy-demo/: Cargo.toml
workspace/apps/embassy-demo/src/: main.rs
workspace/apps/i2c-tmp102/: Cargo.toml  app.uf2  firmware.uf2
workspace/apps/i2c-tmp102/src/: main.rs
workspace/apps/ownership-examples/src/: main  main.rs  rust-ownership-examples.rs
workspace/apps/serial-attempt-2/: Cargo.toml  firmware.uf2
workspace/apps/serial-attempt-2/src/: main.rs
workspace/apps/timer-interrupt/src/: main.rs
workspace/apps/tmp102-driver-demo/: Cargo.toml
workspace/apps/usb-serial/: Cargo.toml  firmware.uf2
workspace/apps/usb-serial/src/: main.rs
workspace/libs/tmp102-driver/src/: lib.rs
