[package]
name = "blinky"
version = "0.1.0"
edition = "2024"

[dependencies]
rp2040-hal = { version = "0.11.0", features = ["rt", "critical-section-impl"] }
rp2040-boot2 = "0.3.0"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"